--- a/Dockerfile-generateconfig-processing
+++ b/Dockerfile-generateconfig-processing
@@ -1,5 +1,16 @@
 # syntax=docker/dockerfile:1
 FROM alpine:3.18.4
 RUN apk add --no-cache bash yq perl python3 py3-yaml
+# Create a temporary directory for the script
+WORKDIR /tmp
+COPY docker-generateconfig/processing.sh /tmp/processing.sh
+RUN chmod +x /tmp/processing.sh
+
+# Create a wrapper script to run processing.sh and ensure output goes to /code
+RUN echo '#!/bin/bash' > /tmp/run-processing.sh && \
+    echo 'bash /tmp/processing.sh' >> /tmp/run-processing.sh && \
+    chmod +x /tmp/run-processing.sh
+
 WORKDIR /code
-ENTRYPOINT ["bash", "/code/docker-generateconfig/processing.sh"]
+
+ENTRYPOINT ["/tmp/run-processing.sh"]
