--- a/Dockerfile-generateconfig-processing
+++ b/Dockerfile-generateconfig-processing
@@ -8,6 +8,8 @@ RUN apk add --no-cache bash yq perl python3 py3-yaml
 WORKDIR /tmp
 COPY docker-generateconfig/processing.sh /tmp/processing.sh
 COPY docker-generateconfig/setListenIp.py /tmp/setListenIp.py
+COPY docker-generateconfig/etc/ /tmp/etc/
+COPY docker-generateconfig/aws-credentials /tmp/aws-credentials
 RUN chmod +x /tmp/processing.sh
 
 # Create a wrapper script to run processing.sh
