feat: Update configuration for Coolify integration and adjust file paths for consistency

--- a/.env.coolify
+++ b/.env.coolify
@@ -80,3 +80,13 @@ S3_ENDPOINT=https://minio.dragonnet.lan
 STORAGE_DIR="/storage"
 
 ANY_SYNC_DAEMONS_MEMORY_LIMIT=500M
+
+# Coolify Environment Configuration
+
+# Storage paths (mounted as volumes)
+DATA_DIR=./data
+LOGS_DIR=./logs
+
+# Service configuration
+DEBUG_MODE=false
+NODE_ENV=production
