fix: Update volume configuration for any-sync services in docker-compose.yaml for improved path handling

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,7 +85,12 @@ services:
     volumes:
       - code:/code
       - coordinator_network_store:/networkStore
-      - code/etc/any-sync-coordinator:/etc/any-sync-coordinator
+      - type: volume
+        source: code
+        target: /etc/any-sync-coordinator
+        volume:
+          bind:
+            subpath: etc/any-sync-coordinator
     restart: unless-stopped
 
   any-sync-filenode:
@@ -102,7 +107,12 @@ services:
     volumes:
       - code:/code
       - filenode_network_store:/networkStore
-      - code/etc/any-sync-filenode:/etc/any-sync-filenode
+      - type: volume
+        source: code
+        target: /etc/any-sync-filenode
+        volume:
+          bind:
+            subpath: etc/any-sync-filenode
     restart: unless-stopped
 
   any-sync-node-1:
@@ -120,7 +130,12 @@ services:
       - node1_storage:/storage
       - node1_any_storage:/anyStorage
       - node1_network_store:/networkStore
-      - code/etc/any-sync-node:/etc/any-sync-node
+      - type: volume
+        source: code
+        target: /etc/any-sync-node-1
+        volume:
+          bind:
+            subpath: etc/any-sync-node-1
     restart: unless-stopped
 
   any-sync-node-2:
@@ -138,7 +153,12 @@ services:
       - node2_storage:/storage
       - node2_any_storage:/anyStorage
       - node2_network_store:/networkStore
-      - code/etc/any-sync-node:/etc/any-sync-node
+      - type: volume
+        source: code
+        target: /etc/any-sync-node-2
+        volume:
+          bind:
+            subpath: etc/any-sync-node-2
     restart: unless-stopped
 
   any-sync-node-3:
@@ -156,7 +176,12 @@ services:
       - node3_storage:/storage
       - node3_any_storage:/anyStorage
       - node3_network_store:/networkStore
-      - code/etc/any-sync-node:/etc/any-sync-node
+      - type: volume
+        source: code
+        target: /etc/any-sync-node-3
+        volume:
+          bind:
+            subpath: etc/any-sync-node-3
     restart: unless-stopped
 
   any-sync-consensusnode:
@@ -171,7 +196,12 @@ services:
     volumes:
       - code:/code
       - consensusnode_network_store:/networkStore
-      - code/etc/any-sync-consensusnode:/etc/any-sync-consensusnode
+      - type: volume
+        source: code
+        target: /etc/any-sync-consensusnode
+        volume:
+          bind:
+            subpath: etc/any-sync-consensusnode
     restart: unless-stopped
 
   netcheck:
